crates/strider-analyze/tests/snapshots/v3__ppc64le__arithmetic__smod.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "7" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "8" -> "7" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "9" -> "3" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "10" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "4" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="Neg\nu64 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Mul:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Sdiv:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "18" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "19" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "21" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "23" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "25" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
